--- a/shell.html
+++ b/shell.html
@@ -56,11 +56,11 @@ body {
     border-right-style: solid;
 }
 #home-a {
-        color: #6200ff;
-        text-decoration: none;
+    color: #6200ff;
+    text-decoration: none;
 }
 #home-a:hover {
-        color: #000;
+    color: #000;
 }
 #home-btn:hover {
     background: #6200ff;
@@ -98,9 +98,14 @@ iframe#tool-frame {
   top: 60px;
   left: 0;
   width: 100%;
-  height: 93%;
-  bottom: 0;
+  height: 90%;
+  bottom: 100px;
   border: none;
+}
+iframe#tool-frame {
+  overflow: hidden;        /* remove scrollbars */
+  -ms-overflow-style: none;  /* IE 10+ */
+  scrollbar-width: none;      /* Firefox */
 }
 </style>
 </head>
@@ -114,28 +119,47 @@ iframe#tool-frame {
 <div id="link-btn" title="Back to Navigator">
   <a id="home-a" onclick="linkToBrowser()">0PEN IN BR0WSER</a>
 </div>
-<iframe id="tool-frame" src=""></iframe>
-
+<header>SH3LL</header>
+<iframe id="tool-frame" src="http://127.0.0.1:27681"></iframe>
+<style type="text/css">
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border: 0px none;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb:active {
+  background: transparent;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+  border: 0px none;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-track:hover {
+  background: transparent;
+}
+::-webkit-scrollbar-track:active {
+  background: transparent;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+</style> 
 <script>
   // HOME button goes back to navigator
   document.getElementById('home-btn').onclick = () => {
     window.location.href = './index.html';
-  }
-
-  // Set iframe src based on URL params
-  const params = new URLSearchParams(window.location.search);
-  const url = params.get('url');
-  const title = params.get('title');
-
-  if (url) {
-    document.getElementById('tool-frame').src = url;
-  }
-  if (title) {
-    document.getElementById('tool-title').textContent = title;
-  }
-  function linkToBrowser() {
-    const iframeSrc = document.getElementById('tool-frame').src;
-    window.open(iframeSrc, '_blank');
   }
 </script>
 
