--- a/web_utils.html
+++ b/web_utils.html
@@ -67,7 +67,8 @@ main {
 
 /* --- Panels --- */
 .panel {
-  background: rgba(72, 26, 137, 0.35);
+  background: #000;
+  border: 1px solid #6200ff;
   border-radius: 8px;
   padding: 14px;
 }
@@ -75,7 +76,7 @@ main {
 .panel h2 {
   margin: 0 0 10px;
   font-size: 1.1rem;
-  color: #b388ff;
+  color: #6200ff;
 }
 
 /* --- Inputs --- */
@@ -84,7 +85,7 @@ input, select, button {
   margin-top: 6px;
   padding: 8px;
   background: #000;
-  border: 1px solid #673ab7;
+  border: 1px solid #6200ff;
   color: #fff;
   border-radius: 4px;
   font-family: inherit;
@@ -97,7 +98,7 @@ button {
 }
 
 button:hover {
-  background: #673ab7;
+  background: #6200ff;
   color: #000;
 }
 
@@ -111,30 +112,30 @@ button:hover {
   font-size: 0.9rem;
 }
 #home-btn {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  z-index: 999;
-  padding: 18px 14px;
-  background: rgba(72, 26, 137, 0.55);
-  color: #9f8cff;
-  font-size: 18px;
-  cursor: pointer;
-  transition: all 0.25s ease;
-  border-right: #8844ff;
-  border-right-width: 2px;
-  border-right-style: solid;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 999;
+    padding: 18px 14px;
+    background: #000;
+    color: #6200ff;
+    font-size: 18px;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    border-right: #6200ff;
+    border-right-width: 2px;
+    border-right-style: solid;
 }
 #home-a {
-    color: #9f8cff;
-    text-decoration: none;
+        color: #6200ff;
+        text-decoration: none;
 }
 #home-a:hover {
-    color: #000;
+        color: #000;
 }
 #home-btn:hover {
-  background: #9f8cff;
-  color: #000;
+    background: #6200ff;
+    color: #000;
 }
 
 .node {
@@ -154,18 +155,13 @@ header {
 .app {
   padding-top: 80px; /* adjust if needed */
 }
+/* --- Header --- */
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 16px 24px;
-  text-align: center;
-  backdrop-filter: blur(6px);
-
-  z-index: 100;
+    padding: 16px 24px;
+    background: #000;
+    font-size: 1.4rem;
+    letter-spacing: 1px;
 }
-
 </style>
 </head>
 
@@ -173,21 +169,13 @@ header {
 <canvas id="bg"></canvas>
 
 <div id="home-btn" title="Back to Navigator">
-  <a id="home-a" href="./index.html">H0ME</a>
+  H0ME
 </div>
 
 <div class="app">
-  <header>UHC OSINT Dashboard</header>
-
   <main>
     <!-- TOOLS -->
     <div class="tools">
-
-      <div class="panel">
-        <h2>Hash File</h2>
-        <input type="file" id="hashFile">
-        <button onclick="hashFile()">Compute Hashes</button>
-      </div>
 
       <div class="panel">
         <h2>WHOIS</h2>
@@ -208,12 +196,6 @@ header {
         <button onclick="runDig()">Run DIG</button>
       </div>
 
-      <div class="panel">
-        <h2>Metadata</h2>
-        <input type="file" id="metaFile">
-        <button onclick="getMetadata()">Extract Metadata</button>
-      </div>
-
     </div>
 
     <!-- OUTPUT -->
@@ -224,10 +206,16 @@ header {
 </div>
 
 <script>
+document.getElementById('home-btn').onclick = () => {
+    window.location.href = './index.html';
+}
 /* ---------- Backend Calls ---------- */
 const output = document.getElementById("output");
 
 function show(data) {
+  if (JSON.stringify(data).startsWith("{\"output\":")) {
+    data = data.output;
+  }
   output.textContent = typeof data === "string"
     ? data
     : JSON.stringify(data, null, 2);
